feat(account): remove financial_institution_id column
