# app/schema/api/v1/account/response.rb
@@ -7,12 +7,8 @@ module Api
 
           base_class.include Api::V1::FinancialInstitution::Response
           base_class.def_param_group :account_response do
-            schema.except(:financial_institution_id).each do |name, info|
+            schema.each do |name, info|
               property(name, info[:type], info.slice(:desc))
-            end
-
-            property :financial_institution, Hash do
-              param_group :financial_institution_response, base_class
             end
           end
         end
